tests/sema/negative/duplicate_enum.nv
enum Color {
    Red;
}

enum Color {
    Blue;
}

fn main() : void {
    return;
}
